# krabby-research

./: .coveragerc  .gitignore  DEVELOPER.md  Makefile  build_parkour_wheel.py  pytest.ini
HAL/: __init__.py
HAL/Isaac/: __init__.py  hal_server.py  main.py
HAL/ZMQ/: __init__.py  client.py  server.py
HAL/commands/: types.py
HAL/telemetry/: types.py
HAL/tools/: __init__.py  hal_dump.py
assets/: crab_hex.urdf  hf_download.py
compute/: __init__.py
compute/parkour/: README.md  __init__.py  benchmark_inference.py  inference_client.py  parkour_types.py  policy_interface.py  pyproject.toml  test_checkpoint_loading.py  types.py
compute/testing/: __init__.py  inference_test_runner.py  main.py  mock_hal_server.py
docs/: DOCKER_DEPENDENCIES.md  FOLDER_LAYOUT.md  HAL_GUIDE.md  JETSON_DEPLOYMENT.md  RUNTIME_ARCHITECTURE.md  TECHNOLOGY_AND_TERMINOLOGY.md
firmware/: SETUP.md  Task1_YawControl.ino  krabby_mcu.py
firmware/Dual_Yaw/: Dual_Yaw.ino
firmware/Task1_YawControl/: Task1_YawControl.ino
firmware/Task2_SixAxis/: SETUP.md  calibration_wizard.py  krabby_mcu_six_axis.py
hal/: config.py
hal/client/: __init__.py  client.py  config.py  pyproject.toml
hal/isaac/: hal_server.py  main.py
hal/krabby-hal-client/: pyproject.toml
hal/krabby-hal-server/: pyproject.toml
hal/krabby-hal-server-isaac/: pyproject.toml
hal/krabby-hal-server-jetson/: pyproject.toml
hal/krabby-hal-server/hal/server/: config.py  server.py
hal/krabby-hal-tools/: pyproject.toml
hal/observation/: __init__.py
hal/server/: __init__.py  config.py  pyproject.toml  server.py
hal/server/jetson/: README.md  __init__.py  camera.py  hal_server.py  main.py  pyproject.toml
hal/tools/: hal_dump.py  joystick_teleoperation.py  pyproject.toml
hal/zmq/: client.py  server.py
hardware/diagrams/: Krabbie-Uno-v1.drawio
images/isaacsim/: .dockerignore  Dockerfile  README.md  requirements.txt  run_hal_server.sh  run_test_runner.sh  test_runner.py
images/locomotion/: .dockerignore  Dockerfile  README.md  requirements.txt
locomotion/: __init__.py
locomotion/isaacsim/: __init__.py  main.py
locomotion/jetson/: README.md  __init__.py  benchmark_inference.py  camera.py  export_to_tensorrt.py  hal_server.py  inference_runner.py  joystick_client.py  main.py  test_checkpoint_loading.py
parkour/: Makefile  README.md  pyproject.toml  setup.py
parkour/parkour_tasks/: pyproject.toml  setup.py
parkour/scripts/: README.md  gen_house_01_usda.py  gen_wyatt_house.py  publish_weights.py  verify_usda_equivalence.py
scripts/: setup-docker-gpu.sh
scripts/wheel-build/: build_parkour_wheel.py  setup_parkour.py
tests/: conftest.py  helpers.py
tests/integration/: test_acceptance.py  test_game_loop.py  test_isaacsim_hal.py  test_isaacsim_noop.py  test_jetson_hal.py  test_memory_buffers.py  test_message_integrity.py  test_observation_format.py  test_timing.py  test_version_compatibility.py  test_zero_copy.py
tests/unit/: test_compute_parkour_policy.py  test_hal_client.py  test_hal_server.py  test_observation_types.py  test_zero_copy.py
(+57 files in other folders)
